[package]
name = "lssaid"
version = "0.1.0"
edition = "2021"
authors = ["KirottuM"]
description = "LiSt Steam AppID, A tool to get Steam app names with their Steam appids."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "3.0", features = ["cargo"] }
