[package]
name = "lssaid"
version = "0.1.0"
edition = "2021"
authors = ["KirottuM"]
description = "LiSt Steam AppID, A tool to get Steam app names with their Steam appids."
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "3.0", features = ["cargo"] }
unicode-segmentation = "1.9.0"
strip-ansi-escapes = "0.1.1"

[profile.release]
lto = "fat"
codegen-units = 1
